--- a/stock analysis.ipynb
+++ b/stock analysis.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "76711d57",
+   "metadata": {},
+   "source": [
+    "Import Modules"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "ffbebcd5",
+   "execution_count": 1,
+   "id": "a32bee41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +22,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "847f0dd3",
+   "metadata": {},
+   "source": [
+    "Read CSV"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "9b818c77",
    "metadata": {},
    "outputs": [
@@ -113,7 +129,7 @@
        "4  2024-05-07  31.584888458251953   33.75   33.75   33.75   33.75         0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,8 +140,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "100dce45",
+   "metadata": {},
+   "source": [
+    "Delete not interested row"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "f9e94035",
    "metadata": {},
    "outputs": [
@@ -223,7 +247,7 @@
        "6  2024-05-09  31.584888458251953  33.75   34.0   33.5  33.75  20770900"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,8 +258,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8409bf94",
+   "metadata": {},
+   "source": [
+    "Change type of Columns to Numeric"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "1135d570",
    "metadata": {},
    "outputs": [
@@ -333,7 +365,7 @@
        "6 2024-05-09  31.584888  33.75  34.00  33.50  33.75  20770900"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,6 +377,14 @@
     "cols = [\"Open\", \"High\", \"Low\", \"Close\", \"Adj Close\", \"Volume\"]\n",
     "df_cleaned[cols] = df_cleaned[cols].apply(pd.to_numeric)\n",
     "df_cleaned.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e514879",
+   "metadata": {},
+   "source": [
+    "Exploratory Data Analysis"
    ]
   },
   {
@@ -378,7 +418,7 @@
    "id": "2d7bc3c5",
    "metadata": {},
    "source": [
-    "Histogram"
+    "Histogram (Data Distribution)"
    ]
   },
   {
@@ -451,6 +491,14 @@
     "\n",
     "print(f\"จำนวน outliers : {len(outliers)}\")\n",
     "print(outliers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ca5835c",
+   "metadata": {},
+   "source": [
+    "Boxplot Diagram (Show the Outliers)"
    ]
   },
   {
